# silicon_research

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  goke_venc.workspace  udp_depay.cc
.github/workflows/: main.yml
cmake/: external_project.cmake  framework.cmake  set_option.cmake
cmake/platform/: gk7205v300.cmake  hi3536dv100.cmake
cmake/toolchain/: gcc.cmake
gk7205v300/: CMakeLists.txt
gk7205v300/venc/: CMakeLists.txt  common.c  compat.c  config.c  isp_profiles.c  main.c  main.h  vi_profiles.c
gk7205v300/venc/sensor/: imx307_2l_cmos.c  imx307_2l_cmos_ex.h  imx307_2l_sensor_ctl.c  imx307_cmos.c  imx307_cmos_ex.h  imx307_sensor_ctl.c  imx335_cmos.c  imx335_cmos_ex.h  imx335_sensor_ctl.c
hi3536dv100/: CMakeLists.txt  vdec.tar.xz
hi3536dv100/osd/: CMakeLists.txt  display_fbdev.h  lv_conf.h  osd.c  queue.h
hi3536dv100/osd/items/: CMakeLists.txt
hi3536dv100/osd/items/horizon/: horizon.c  horizon.h
hi3536dv100/osd/ui/: CMakeLists.txt  ui.h  ui_helpers.c
hi3536dv100/osd/ui/components/: ui_comp.c  ui_comp_hook.h  ui_comp_itemimgtext.c  ui_comp_itemimgtext.h  ui_comp_itemtexttext.c  ui_comp_itemtexttext.h
hi3536dv100/osd/ui/images/: ui_img_arhorizon_png.c  ui_img_icon_altw_png.c  ui_img_icon_arrow_left_png.c  ui_img_icon_clock_png.c  ui_img_icon_crosshair_png.c  ui_img_icon_gps_png.c  ui_img_icon_signal_png.c  ui_img_icon_throttle_png.c  ui_img_icon_vertical_png.c  ui_img_iconnavi_png.c
hi3536dv100/osd/ui/screens/: ui_mainOSD1.c
hi3536dv100/vdec/: CMakeLists.txt  fbg_fbdev.c  fbg_fbdev.h  fbgraphics.c  fbgraphics.h  font_16x16.c  main.c  main.h  udp_stream.c  vo.c
osd/: CMakeLists.txt  display_fbdev.c  lv_conf.h  mavlink_parser.c  mavlink_parser.h  osd.h  queue.c  queue.h  util.c  util.h
osd/items/horizon/: CMakeLists.txt  horizon.h
osd/ui/: filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.h
osd/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_itemtexttext.c
osd/ui/images/: ui_img_ico_record_png.c  ui_img_icon_battery_png.c  ui_img_icon_gps_png.c  ui_img_icon_home_png.c  ui_img_icon_speed_png.c  ui_img_icon_thermometer_png.c  ui_img_logo_png.c
osd/ui/screens/: ui_mainOSD1.c
sample/: vdec-sample.c  vdec-stdout.c
sdk/gk7205v300/gmp/include/: ae_comm.h  af_comm.h  audio_bcd.h  autoconf.h  awb_comm.h  buffer.h  comm_3a.h  comm_adec.h  comm_aenc.h  comm_ao.h  comm_cipher.h  comm_gdc.h  comm_isp.h  comm_ive.h  comm_snap.h  comm_sys.h  comm_vb.h  common_qr.h  gfbg.h  gk_api_ae.h  gk_api_awb_natura.h  gk_api_vgs.h  gk_api_vpss.h  gk_ivp.h  gk_ivs_qr.h  gk_vqe_register_api.h  isp_debug.h  ive.h  ivp.h  ivs_qr.h  list.h  mipi.h  resampler_api.h  securec.h  ssp.h  tde_api.h  tde_errcode.h  types.h  vou_exp.h
sdk/gk7205v300/include/: aacdec.h  acodec.h  adc.h  ae_comm.h  audio_aacdec.h  audio_aacenc.h  audio_acodec.h  audio_bcd.h  autoconf.h  awb_comm.h  buffer.h  comm_3a.h  comm_adec.h  comm_aenc.h  comm_ai.h  comm_aio.h  comm_ao.h  comm_cipher.h  comm_dis.h  comm_gdc.h  comm_isp.h  comm_ive.h  comm_rc.h  comm_region.h  comm_snap.h  comm_sns.h  comm_sys.h  comm_vb.h  comm_venc.h  comm_vgs.h  comm_vi.h  comm_video.h  comm_vo.h  comm_vpss.h  common.h  common_qr.h  defines.h  errcode.h  gfbg.h  gk_aacdec.h  (+108 more)
sdk/gk7205v300/sensor/: imx307_2l_cmos.c  imx307_2l_cmos_ex.h  imx307_2l_sensor_ctl.c  imx335_cmos.c  imx335_cmos_ex.h  imx335_sensor_ctl.c
sdk/gmp/include/: adc.h  audio_aacdec.h  audio_aacenc.h  audio_acodec.h  comm_ai.h  comm_aio.h  comm_dis.h  comm_rc.h  comm_region.h  comm_sns.h  comm_venc.h  comm_vgs.h  comm_vi.h  comm_video.h  comm_vo.h  comm_vpss.h  common.h  defines.h  errcode.h  gk_aacdec.h  gk_aacenc.h  gk_api_audio.h  gk_api_awb.h  gk_api_cipher.h  gk_api_isp.h  gk_api_ive.h  gk_api_region.h  gk_api_snap.h  gk_api_sys.h  gk_api_vb.h  gk_api_venc.h  gk_api_vi.h  gk_api_vo.h  gk_audio_bcd.h  gk_ivs_md.h  gk_resampler_api.h  gk_tde_api.h  i2c.h  isp_bin.h  isp_defines.h  (+10 more)
sdk/hi3516ev300/: build.sh
sdk/hi3516ev300/include/: hi_common.h
sdk/hi3516ev300/sensor/: imx307_2l_cmos.c  imx307_2l_cmos_ex.h  imx307_2l_sensor_ctl.c  imx335_cmos.c  imx335_cmos_ex.h  imx335_sensor_ctl.c
sdk/hi3536dv100/drviers_fixed/: load_hisilicon
sdk/hi3536dv100/drviers_fixed/hisilicon/: hi_osal.ko
sdk/hi3536dv100/include/: hi_comm_aio.h  hi_comm_hdmi.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_sys.h  hi_comm_vb.h  hi_comm_vdec.h  hi_comm_venc.h  hi_comm_vgs.h  hi_comm_vi.h  hi_comm_video.h  hi_comm_vo.h  hi_defines.h  hi_errno.h  mpi_sys.h  mpi_venc.h  mpi_vi.h  mpi_vo.h  mpi_vpss.h
sdk/hi3536dv100/include/mkp/: mod_ext.h
sdk/hi3536dv100/lib/: ida08093.tmp.id2  mpi_vdec_1.o.i64
sdk/hi3536dv100/osal/: CMakeLists.txt
sdk/hi3536dv100/osal/include/: hi_osal.h  hi_osal_init.h  hi_osal_user.h  osal_ioctl.h  osal_list.h  osal_mmz.h
sdk/hi3536dv100/osal/source/kernel/: .built-in.o.cmd  .hi_osal.ko.cmd  .hi_osal.mod.o.cmd  .hi_osal.o.cmd  .osal.o.cmd  .osal_addr.o.cmd  .osal_atomic.o.cmd  .osal_barrier.o.cmd  .osal_cache.o.cmd  .osal_debug.o.cmd  .osal_device.c.swp  .osal_device.o.cmd  .osal_fileops.o.cmd  .osal_interrupt.o.cmd  .osal_math.o.cmd  .osal_mutex.o.cmd  .osal_notifier.o.cmd  .osal_platform.o.cmd  .osal_proc.o.cmd  .osal_schedule.o.cmd  .osal_semaphore.o.cmd  .osal_spinlock.o.cmd  .osal_string.o.cmd  .osal_task.o.cmd  .osal_timer.o.cmd  .osal_vmalloc.o.cmd  .osal_wait.o.cmd  .osal_workqueue.o.cmd  Makefile  Module.symvers  hi_osal.mod.c  modules.order  osal.c  osal_addr.c  (+21 more)
sdk/hi3536dv100/v1/lib_old/: ida08093.tmp.id0  ida08093.tmp.id1  ida08093.tmp.nam
sdk/include/: aacenc.h  hi_af_comm.h  hi_audio_bcd.h  hi_buffer.h  hi_comm_aenc.h  hi_comm_ai.h  hi_comm_ive.h  hi_comm_region.h  hi_comm_sns.h  hi_comm_vb.h  hi_comm_vo.h  hi_i2c.h  hi_isp_bin.h  hi_sns_ctrl.h  hi_ssp.h  mpi_venc.h
vdec/: Makefile  fbg_fbdev.c  fbg_fbdev.h  fbgraphics.c  fbgraphics.h  font_16x16.c  main.c  main.h  recorder.c  recorder.h  telemetry.c  udp_stream.c  vo.c
venc/: CMakeLists.txt  Makefile  README.md  common.c  compat.c  isp_profiles.c  main.c  main.h  mipi_profiles.c  vi_profiles.c
x86/: vdec-i386.c
(+16 files in other folders)
